--- a/force-app/main/tests/classes/Test_FillTAOnParticipantsBatchHandler.cls
+++ b/force-app/main/tests/classes/Test_FillTAOnParticipantsBatchHandler.cls
@@ -1,16 +1,7 @@
 @IsTest(IsParallel=true)
 public class Test_FillTAOnParticipantsBatchHandler {
 
-    @TestSetup
     public static void setup() {
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
-                .when('createPortalUsers')
-                .then(null)
-                .when('createParticipantUsers')
-                .then(null)
-                .getInstance()
-        );
-
         Account singleAccount = (Account) TestDataFactory.getSObject(Account.getSObjectType());
         Account participantAccount = (Account) TestDataFactory.getSObject(Account.getSObjectType(), new Map<String, Object>{
                 'Name' => 'Participant'
@@ -118,6 +109,16 @@ public class Test_FillTAOnParticipantsBatchHandler {
 
     @IsTest
     public static void batch_Test() {
+
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .build()
+        );
+        setup();
 
         Test.startTest();
         String participantsQuery = 'SELECT Id, ' +
