--- a/force-app/main/default/classes/StubBuilder.cls
+++ b/force-app/main/default/classes/StubBuilder.cls
@@ -1,4 +1,11 @@
-public with sharing class StubFactory {
+/**
+ * Created by Yehor Dobrovolskyi
+ */
+public with sharing class StubBuilder {
+
+    private Stub stub;
+    private Type typeOfClass;
+    private String methodName;
 
     public static StubBuilder newInstance(Type typeOfClass) {
 
@@ -8,6 +15,25 @@ public with sharing class StubFactory {
     public static StubBuilder newInstance(String fullNameOfClass) {
 
         return newInstance(Type.forName(fullNameOfClass));
+    }
+
+    public StubBuilder(Type typeOfClass) {
+        this.stub = new StubBuilder.Stub();
+        this.typeOfClass = typeOfClass;
+    }
+
+    public StubBuilder when(String methodName) {
+        this.methodName = methodName;
+        return this;
+    }
+
+    public StubBuilder then(Object desiredResult) {
+        this.stub.desiredResultsByMethodNames.put(methodName, desiredResult);
+        return this;
+    }
+
+    public Object build() {
+        return Test.createStub(this.typeOfClass, stub);
     }
 
     public class Stub implements System.StubProvider {
@@ -29,36 +55,11 @@ public with sharing class StubFactory {
             if (result instanceof CodeExecutor) {
                 return ((CodeExecutor) result).execute(listOfArgs);
             }
-            if(result instanceof Exception) {
+            if (result instanceof Exception) {
                 throw (Exception) result;
             }
             return result;
         }
     }
 
-    public class StubBuilder {
-
-        private Stub stub;
-        private Type typeOfClass;
-        private String methodName;
-
-        public StubBuilder(Type typeOfClass) {
-            this.stub = new StubFactory.Stub();
-            this.typeOfClass = typeOfClass;
-        }
-
-        public StubBuilder when(String methodName) {
-            this.methodName = methodName;
-            return this;
-        }
-
-        public StubBuilder then(Object desiredResult) {
-            this.stub.desiredResultsByMethodNames.put(methodName, desiredResult);
-            return this;
-        }
-
-        public Object getInstance() {
-            return Test.createStub(this.typeOfClass, stub);
-        }
-    }
 }
