--- a/force-app/main/tests/classes/Test_ClinicalTrialProfileTriggerHandler.cls
+++ b/force-app/main/tests/classes/Test_ClinicalTrialProfileTriggerHandler.cls
@@ -4,16 +4,9 @@
 @IsTest(IsParallel=true)
 public with sharing class Test_ClinicalTrialProfileTriggerHandler {
 
-    @TestSetup
     public static void setup() {
 
-        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
-                .when('createPortalUsers')
-                .then(null)
-                .when('createParticipantUsers')
-                .then(null)
-                .getInstance()
-        );
+
         Account singleAccount = (Account) TestDataFactory.getSObject(Account.getSObjectType());
         Account participantAccount = (Account) TestDataFactory.getSObject(Account.getSObjectType(), new Map<String, Object>{
                 'Name' => 'Participant'
@@ -120,7 +113,15 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
 
     @IsTest
     public static void updateCTP_ChangeTAOnCTP_Test() {
-
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .build()
+        );
+        setup();
         List<Clinical_Trial_Profile__c> cTPs = [
                 SELECT Id,
                         Therapeutic_Area__c
@@ -159,7 +160,15 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
 
     @IsTest
     public static void updateCTP_RemoveTAOnCTP_Test() {
-
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .build()
+        );
+        setup();
         List<Clinical_Trial_Profile__c> cTPs = [
                 SELECT Id,
                         Therapeutic_Area__c
@@ -185,6 +194,15 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
 
     @IsTest
     public static void deleteRelatedToStudyDocuments_Test_ResInDiffStudies() {
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .build()
+        );
+        setup();
         delete [SELECT Id FROM Clinical_Trial_Profile__c];
         Clinical_Trial_Profile__c t1 = (Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType());
         t1.NCT_Number__c = 'NCT00000000';
@@ -268,6 +286,15 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
 
     @IsTest
     public static void deleteRelatedToStudyDocuments_TestAllResInStudies() {
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .build()
+        );
+        setup();
         delete [SELECT Id FROM Clinical_Trial_Profile__c];
         Clinical_Trial_Profile__c t1 = (Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType());
         t1.NCT_Number__c = 'NCT00000000';
@@ -346,6 +373,15 @@ public with sharing class Test_ClinicalTrialProfileTriggerHandler {
 
     @IsTest
     public static void deleteRelatedToStudyDocuments_Test_NotCompletedStudy() {
+        ClassFactory.clearStubTypesByClassNamesMap();
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubBuilder.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .build()
+        );
+        setup();
         delete [SELECT Id FROM Clinical_Trial_Profile__c];
         Clinical_Trial_Profile__c t1 = (Clinical_Trial_Profile__c) TestDataFactory.getSObject(Clinical_Trial_Profile__c.getSObjectType());
         t1.NCT_Number__c = 'NCT00000000';
