--- a/force-app/main/tests/classes/Test_TaskEditRemote.cls
+++ b/force-app/main/tests/classes/Test_TaskEditRemote.cls
@@ -2,6 +2,8 @@
  * Created by Denis on 12.04.2019.
  */
 
+//TODO Check this tests
+
 @IsTest(IsParallel=true)
 private class  Test_TaskEditRemote {
 
