Accuracy check was added.
Accuracy check was added.

--- a/force-app/main/default/classes/StudyListViewController.cls
+++ b/force-app/main/default/classes/StudyListViewController.cls
@@ -369,6 +369,7 @@ public without sharing class StudyListViewController {
                                 Account.BillingStateCode,
                                 Account.BillingLatitude,
                                 Account.BillingLongitude,
+                                Account.BillingGeocodeAccuracy,
                                 Account.Driving_Directions__c,
                                 Account.Parking_Instructions__c
                         FROM AccountContactRelation
