--- a/force-app/main/default/classes/StudyListViewController.cls
+++ b/force-app/main/default/classes/StudyListViewController.cls
@@ -289,11 +289,10 @@ public without sharing class StudyListViewController {
 
     @AuraEnabled
     public static String returnAndRemoveAccount() {
-        Set<String> accuracies = new Set<String> { 'Address', 'NearAddress', 'Block', 'Street', 'ExtendedZip' };
         List<Account> acc = [SELECT Id, Name, BillingLongitude, BillingLatitude, BillingGeocodeAccuracy, BillingCity, BillingCountry, BillingStreet FROM Account WHERE Name = :DUMMY_ACCOUNT_NAME + ' ' + UserInfo.getUserId()];
         String valueToReturn;
         if (acc.size() > 0) {
-            if (!accuracies.contains(acc[0].BillingGeocodeAccuracy)) {
+            if ('Address' == acc[0].BillingGeocodeAccuracy || 'NearAddress' == acc[0].BillingGeocodeAccuracy || 'Block' == acc[0].BillingGeocodeAccuracy || 'Street' == acc[0].BillingGeocodeAccuracy || 'ExtendedZip' == acc[0].BillingGeocodeAccuracy) {
                 acc[0] = new Account(Id = acc[0].Id,
                         Name = acc[0].Name,
                         BillingStreet = acc[0].BillingStreet,
