add missed status

--- a/force-app/main/default/classes/PEStatusState.cls
+++ b/force-app/main/default/classes/PEStatusState.cls
@@ -48,6 +48,7 @@ public without sharing class PEStatusState {
     public static final String PE_STATUS_SCREENING_COMPLETE = 'Screening Complete';
     public static final String PE_STATUS_SCREENING_IN_PROGRESS= 'Screening In Progress';
     public static final String PE_STATUS_SCREENING_FAILED = 'Screening Failed';
+    public static final String PE_STATUS_ENROLLMENT_OLD = 'Enrollment';
     public static final String PE_STATUS_ENROLLMENT_SUCCESS = 'Enrollment Success';
     public static final String PE_STATUS_ENROLLMENT_FAILED = 'Enrollment Failed';
     
@@ -186,6 +187,7 @@ public without sharing class PEStatusState {
             PE_STATUS_SCREENING_COMPLETE => 4,
             PE_STATUS_SCREENING_IN_PROGRESS => 4,
             PE_STATUS_SCREENING_FAILED => 4,
+            PE_STATUS_ENROLLMENT_OLD => 5,
             PE_STATUS_ENROLLMENT_SUCCESS => 5,
             PE_STATUS_ENROLLMENT_FAILED => 5,
             PE_STATUS_TREATMENT_PERIOD_STARTED => 6,
